@@ -2,15 +2,14 @@
 
 #include "fb.h"
 
-/*:::::*/
-FBCALL int fb_ArrayUBound
-	( 
-		FBARRAY *array, 
-		int dimension 
-	)
+FBCALL int fb_ArrayUBound( FBARRAY *array, int dimension )
 {
 	if( dimension > 0 )
 		--dimension;
 
-    return array->dimTB[dimension].ubound;
+	if( (dimension < 0) || (dimension >= array->dimensions) ) {
+		return 0;
+	}
+
+	return array->dimTB[dimension].ubound;
 }
