@@ -43,6 +43,10 @@ o ABI
     mangling [yet].
     - FB can probably support __thiscall with C/LLVM backends pretty easily
 
+o -exx should catch...
+  - access to ERASEd or uninited (unREDIMed) dyn array
+  - out-of-bounds dimension argument given to lbound()/ubound()
+
 [ ] ctor/dtor
     - add 'function foo (...) as SomeObj = any', so #1682972 could be fixed AND when
       speed is important, the temporary result instance won't be cleared
